--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grunt-runs",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "async": "^0.9.0",
-    "chalk": "^1.0.0"
+    "chalk": "^1.0.0",
+    "dev-null": "^0.1.1"
   }
 }
